--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @layer base {
+
     *,
     *::after,
     *::before {
@@ -13,6 +15,31 @@
 
     body {
         background-color: #f3f4f6;
+    }
+}
+
+@layer utilities {
+    .animation_loader {
+        width: 100%;
+        height: 100%;
+        border: 5px solid #334155;
+        border-bottom-color: transparent;
+        border-radius: 50%;
+        display: inline-block;
+        animation: rotation 1s linear infinite;
+    }
+}
+
+
+
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
     }
 }
 
